tests/requests/snapshots/can_delete_note@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(delete_note_request.status_code(), delete_note_request.text())"
---
(
    200,
    "",
)
